--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ ADMINISTRATOR_CONTACT_PHONE="206-615-0226"
 ADMIN_USERNAMES="doe,jones"
 APPLICATION_HOST=localhost
 ASSET_HOST=localhost:3000
+CAN_VIEW_DEBUG_INFORMATION="jones"
 CAN_VIEW_WITHOUT_RESPONSE_PLANS="jones"
 DB_HOST=db
 DB_USER=postgres
